--- a/src/main/webapp/app/entities/cart-item/detail/cart-item-detail.component.html
+++ b/src/main/webapp/app/entities/cart-item/detail/cart-item-detail.component.html
@@ -32,8 +32,8 @@
         </dd>
         <dt><span>Product</span></dt>
         <dd>
-          <div *ngIf="cartItem.product">
-            <a [routerLink]="['/product', cartItem.product?.id, 'view']">{{ cartItem.product?.id }}</a>
+          <div *ngIf="cartItem.prod">
+            <a [routerLink]="['/product', cartItem.prod?.id, 'view']">{{ cartItem.prod?.id }}</a>
           </div>
         </dd>
         <dt><span>Cart</span></dt>
