--- a/src/main/webapp/app/entities/product/detail/product-detail.component.html
+++ b/src/main/webapp/app/entities/product/detail/product-detail.component.html
@@ -28,7 +28,7 @@
         </dd>
         <dt><span>Discount Percent</span></dt>
         <dd>
-          <span>{{ product.discountPercent }}</span>
+          <span>{{ product.discountPrice }}</span>
         </dd>
         <dt><span>Status</span></dt>
         <dd>
