--- a/src/main/webapp/app/entities/product/list/product.component.html
+++ b/src/main/webapp/app/entities/product/list/product.component.html
@@ -52,7 +52,7 @@
           <td>{{ product.name }}</td>
           <td>{{ product.price }}</td>
           <td>{{ product.quantity }}</td>
-          <td>{{ product.discountPercent }}</td>
+          <td>{{ product.discountPrice }}</td>
           <td>{{ product.status }}</td>
           <td>{{ product.createdAt | formatMediumDatetime }}</td>
           <td>{{ product.updatedAt | formatMediumDatetime }}</td>
