--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -146,7 +146,13 @@ Custom alerts for notification
     }
   }
 }
-
+.striked-price {
+  color: red;
+  text-decoration: line-through;
+}
+.discounted-price {
+  color: limegreen;
+}
 @media screen and (min-width: 480px) {
   .alerts .jhi-toast {
     width: 50%;
