--- a/src/main/webapp/app/cart/cart.component.html
+++ b/src/main/webapp/app/cart/cart.component.html
@@ -41,7 +41,7 @@
       <p class="cart-summary-text-line"></p>
       <p>Wartość produktów:</p>
       <p>{{ totalPrice() }}$</p>
-      <button class="cart-summary-button">Złóż zamówienie</button>
+      <button class="cart-summary-button" (click)="placeOrder()">Złóż zamówienie</button>
     </div>
   </div>
 </div>
